# ark-compiler

./: .dockerignore  .gitignore  .memory_key  BUFFER_FIX_PLAN.md  CLA.md  CONTRIBUTING.md  Dockerfile  INTRINSIC_PARITY.md  JULES_DEPLOYMENT_LOG.txt  LICENSE  MANUAL.md  PATENT_NOTICE  README.md  SWARM_AUDIT_LOG.txt  SWARM_PLAN.md  SWARM_REGISTRY.md  SWARM_REGISTRY_OMEGA.txt  THIRD_PARTY_NOTICES.md  ark-pkg  ark_hardware_compiler.py  bench_temp.txt  benchmark.json  benchmark_mcp.py  check_output.txt  commits.txt  compile_log.txt  compiler_trace_v3.json  compiler_v0.json  compiler_v0_db.json  compiler_v0_debug.json  compiler_v0_lexerfix.json  compiler_v0_lexerfix2.json  compiler_v0_linear.json  compiler_v0_linear_debug.json  compiler_v0_linear_debug_2.json  compiler_v0_linear_debug_3.json  compiler_v0_linear_debug_4.json  compiler_v0_linear_debug_shadow_fix.json  compiler_v0_linear_final_fixed.json  compiler_v0_linear_final_fixed_2.json  (+42 more)
apps/: build.ark  debug_write.ark  debug_write.json  disco.ark  explorer.ark  iron_hand.ark  leviathan_compiler.ark  lsp.ark  lsp_main.ark  manual_example.ark  miner.ark  miner_broken.ark  node.ark  server.ark  snake_browser.ark  sovereign.py  sovereign_shell.ark  spec.ark  test_alpha.ark  test_alpha.json  test_alpha.json.tampered.json  test_bool.ark  test_class.ark  (+6 more)
core/: Cargo.toml  Cargo.toml.bak  build_wasm.ps1  ffi_cargo_additions.txt  libtest_core.rlib  test.rs  test_core.rs  test_std.rs  wasm_cargo_additions.txt
core/examples/: write_state.rs
core/src/: adn.rs  agent_pipeline.rs  ast.rs  bench_intrinsics.rs  blockchain.rs  blockchain.rs.bak  bridge.rs  bytecode.rs  checker.rs  cognitive_intrinsics.rs  compiler.rs  consensus.rs  consensus.rs.bak  crypto.rs  csnp.rs  debugger.rs  desktop_ffi.rs  diagnostic.rs  eval.rs  ffi.rs  governance.rs  intrinsics.rs  lib.rs  lib.rs.bak  loader.rs  macros.rs  ois.rs  parser.rs  persistent.rs  proprioception.rs  repl.rs  runtime.rs  signal_gate.rs  types.rs  veto_circuit.rs  vm.rs  wasm.rs  wasm_codegen.rs  wasm_interop.rs  wasm_runner.rs  (+2 more)
core/tests/: e2e_sovereign_integration.rs
meta/: README.md  activate_swarm.py  activate_swarm_omega.py  agi_awakening.json  agi_genesis.ark  ark.lark  ark.py  ark_1_qi.py  ark_interpreter.py  ark_intrinsics.py  ark_lsp.py  ark_parser.py  ark_security.py  ark_to_json.py  ark_types.py  audit_loader.py  benchmark.py  bridge.py  build_lsp.py  bytecode.py  check_exports.py  compile.py  count_intrinsics.py  docgen.py  factorial.json  gauntlet.py  jules_bridge.py  jules_deploy.py  jules_persona.md  monitor_swarm.py  monitor_swarm_omega.py  network_sim.py  p2p_node.py  parser.py  pyproject.toml  read_log.py  repl.py  swarm_bridge.py  test.ark  test_lsp.py  (+6 more)
meta/pkg/: builder.py  cli.py  index.json  lockfile.py  manifest.py  registry.py
(+227 files in other folders)
