[package]
name = "ark-0-zheng"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
bincode = "1.3"
reqwest = { version = "=0.11.22", features = ["blocking", "json"] }
tokio = { version = "=1.35.0", default-features = false }
schannel = "=0.1.23"

arrow = { version = "50.0", default-features = false, features = ["ipc", "ffi"], optional = true }

[features]
default = []
ipc = ["dep:arrow"]
