[package]
name = "ark-0-zheng"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
bincode = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core", "fast"] }
shell-words = "1.1"
regex = "1.10"

arrow = { version = "50.0", default-features = false, features = ["ipc", "ffi"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "=0.11.22", features = ["json", "blocking"] }
tokio = { version = "=1.38.2", features = ["full"] }
schannel = "=0.1.23"

[features]
default = []
ipc = ["dep:arrow"]
