[package]
name = "ark-0-zheng"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
bincode = "1.3"
ed25519-dalek = { version = "2", features = ["fast"] }
shell-words = "1.1"
wasm-bindgen = "0.2"

arrow = { version = "50.0", default-features = false, features = ["ipc", "ffi"], optional = true }
ctrlc = "3.5.2"
lazy_static = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "=0.11.22", features = ["json", "blocking"] }
tokio = { version = "=1.38.2", features = ["full"] }
schannel = "=0.1.23"
ureq = "2.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
console_error_panic_hook = "0.1"

[features]
default = []
ipc = ["dep:arrow"]
